force-app/main/default/objects/NSSales_609_1_Manager_Routing__c/NSSales_609_1_Manager_Routing__c.object-meta.xml
<CustomObject>
    <label>609.1 Manager Routing</label>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>609.1 Manager Routing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>609.1 Managers Routing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>