force-app/main/default/objects/NSSales_609_1_Manager_Routing__c/fields/NSSales_ID_Manager_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>NSSales_ID_Manager_Email_ID__c</fullName>
    <formula>NSSales_ID_Manager_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industrial Manager Email ID</label>
    <type>Text</type>
</CustomField>