force-app/main/default/objects/NSSales_609_1_Manager_Routing__c/fields/NSSales_ID_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>NSSales_ID_Manager_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industrial Development Manager Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>X609_1_Managers_Routing</relationshipName>
    <type>Lookup</type>
</CustomField>