force-app/main/default/objects/NSSales_609_1_Manager_Routing__c/fields/NSSales_LocationIdentifier__c.field-meta.xml
<CustomField>
    <fullName>NSSales_LocationIdentifier__c</fullName>
    <description>This field stores the combination of State, Country and City of a record.</description>
    <formula>NSSales_State_Name__c +&#39;:&#39;+NSSales_County_Name__c+&#39;:&#39;+NSSales_City_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Identifier</label>
    <type>Text</type>
</CustomField>