force-app/main/default/objects/NSSales_609_1_Manager_Routing__c/fields/NSSales_State_Name__c.field-meta.xml
<CustomField>
    <fullName>NSSales_State_Name__c</fullName>
    <label>State Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>