force-app/main/default/objects/NSSales_609_1_Manager_Routing__c/fields/NSSales_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Territory_Name__c</fullName>
    <label>Territory Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>