force-app/main/default/objects/NSSales_609_1_Manager_Routing__c/validationRules/NSSales_vrStateChangeRestriction.validationRule-meta.xml
<ValidationRule>
    <fullName>NSSales_vrStateChangeRestriction</fullName>
    <active>true</active>
    <description>It restricts user from changing the State from a record. User has to create a new record if the State needs to be changed.</description>
    <errorConditionFormula>ISCHANGED(NSSales_State_Name__c)</errorConditionFormula>
    <errorMessage>State cannot be changed. Please create a new record.</errorMessage>
</ValidationRule>