force-app/main/default/objects/NSSales_609_1_Manager_Routing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NSSales_ID_Manager_Name__c</columns>
    <columns>NSSales_ID_Manager_Email_ID__c</columns>
    <columns>NSSales_City_Name__c</columns>
    <columns>NSSales_County_Name__c</columns>
    <columns>NSSales_State_Name__c</columns>
    <columns>NSSales_Territory_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>